Fix copy task in pipeline

--- a/go-microservices/05-simple-web-api/azure-pipelines.yml
+++ b/go-microservices/05-simple-web-api/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    contents: './web'
+    contents: '$(modulePath)/go-microservices/05-simple-web-api/web'
     targetFolder: $(Build.ArtifactStagingDirectory)
   displayName: 'Copy artifacts to staging directory'
 
