Update queens problem (Go WASM)

--- a/queens-problem/queens-problem-wasm/Dockerfile
+++ b/queens-problem/queens-problem-wasm/Dockerfile
@@ -1,13 +1,15 @@
 # Use a multi-stage build
 FROM golang:latest AS builder
 
-# Install module for solving n queens problem
-RUN go get github.com/rstropek/golang-samples/queens-problem/queens-problem-bitarray-solver
-
-# Compile Go into exe
+# Compile Go into WASM
 WORKDIR /app
+COPY ./go.mod ./
 COPY ./*.go ./
-RUN CGO_ENABLED=0 GOOS=js GOARCH=wasm go build -ldflags="-s -w" -a -o ./qpwasm.wasm .
+ENV CGO_ENABLED=0
+ENV GOOS=js
+ENV GOARCH=wasm
+RUN go get \
+    && go build -ldflags="-s -w" -a -o ./qpwasm.wasm .
 
 FROM nginx:alpine
 
